More test expectations.

--- a/test/testcases/test-iterations-fill.html
+++ b/test/testcases/test-iterations-fill.html
@@ -71,32 +71,50 @@ limitations under the License.
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 300px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 300px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 100px;" class="expected"><div class="anim a" id="a"></div>
+  </div>
+  <div style="width: 100px;" class="expected"><div class="anim b" id="b"></div>
+  </div>
+  <div style="width: 300px;" class="expected"><div class="anim c" id="c"></div>
+  </div>
+  <div style="width: 300px;" class="expected"><div class="anim d" id="d"></div>
+  </div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 100px;" class="expected"><div class="anim a" id="e"></div>
+  </div>
+  <div style="width: 200px;" class="expected"><div class="anim b" id="f"></div>
+  </div>
+  <div style="width: 100px;" class="expected"><div class="anim c" id="g"></div>
+  </div>
+  <div style="width: 200px;" class="expected"><div class="anim d" id="h"></div>
+  </div>
 </div>
 
 <div class="animContainer" id="cc">
-  <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 300px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 300px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 100px;" class="expected"><div class="anim a" id="i"></div>
+  </div>
+  <div style="width: 100px;" class="expected"><div class="anim b" id="j"></div>
+  </div>
+  <div style="width: 300px;" class="expected"><div class="anim c" id="k"></div>
+  </div>
+  <div style="width: 300px;" class="expected"><div class="anim d" id="l"></div>
+  </div>
 </div>
 
 <div class="animContainer" id="cd">
-  <div style="width: 100px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim b"></div></div>
-  <div style="width: 100px;" class="expected"><div class="anim c"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim d"></div></div>
+  <div style="width: 100px;" class="expected"><div class="anim a" id="m"></div>
+  </div>
+  <div style="width: 200px;" class="expected"><div class="anim b" id="n"></div>
+  </div>
+  <div style="width: 100px;" class="expected"><div class="anim c" id="o"></div>
+  </div>
+  <div style="width: 200px;" class="expected"><div class="anim d" id="p"></div>
+  </div>
 </div>
+
+<div style="height: 700px"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
