--- a/test/testcases/test-keyframe-creation.html
+++ b/test/testcases/test-keyframe-creation.html
@@ -75,6 +75,8 @@ limitations under the License.
   <div id="g" class="anim"></div>
 </div>
 
+<div style="height: 750px"></div>
+
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
