--- a/test/testcases/test-pause.html
+++ b/test/testcases/test-pause.html
@@ -57,6 +57,8 @@ limitations under the License.
 <div id="c" class="anim a"></div>
 <div id="d" class="anim b"></div>
 
+<div style="height: 450px"></div>
+
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
