--- a/test/testcases/test-rectangle.html
+++ b/test/testcases/test-rectangle.html
@@ -32,6 +32,7 @@ position: absolute;
 </style>
 <div id="expectation"></div>
 <div id="test"></div>
+<div style="height: 650px"></div>
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
