--- a/test/testcases/test-length-units.html
+++ b/test/testcases/test-length-units.html
@@ -36,7 +36,7 @@ limitations under the License.
   height: 50px;
 }
 
-table {
+#test {
   font-size: 2rem;
 }
 
@@ -46,10 +46,9 @@ Each cell in the table will start at the first value for the column (e.g. 5em,
 5ex, 50px, etc.), then animate to the second value for the column (e.g. 1em,
 1ex, etc.), then animate to the 'to' value for the row.
 
-<table></table>
+<table id="test"></table>
 
 <script src="../../web-animations.js"></script>
-<script src="../anim-test-pre.js"></script>
 <script>
 
 var from = ["1em", "1ex", "10px", "1rem", "5mm", "1cm", "1in", "10pt", "1pc"];
@@ -78,10 +77,11 @@ for (var j = 0; j < to.length; j++) {
 }
 
 document.querySelector("table").innerHTML = table;
-
+</script>
+<script src="../anim-test-pre.js"></script>
+<script>
 for (var id in anims) {
   document.timeline.play(
       new Animation(document.querySelector(id), {width: anims[id]}, 2));
 }
-
 </script>
