--- a/test/testcases/test-playback-rate.html
+++ b/test/testcases/test-playback-rate.html
@@ -66,24 +66,26 @@ limitations under the License.
 <div class="expectation" id="expectation3"></div>
 
 <div class="animContainer" id="ca">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
-  <div class="anim g"></div>
+  <div class="anim a" id="a"></div>
+  <div class="anim b" id="b"></div>
+  <div class="anim c" id="c"></div>
+  <div class="anim d" id="d"></div>
+  <div class="anim e" id="e"></div>
+  <div class="anim f" id="f"></div>
+  <div class="anim g" id="g"></div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div class="anim a"></div>
-  <div class="anim b"></div>
-  <div class="anim c"></div>
-  <div class="anim d"></div>
-  <div class="anim e"></div>
-  <div class="anim f"></div>
-  <div class="anim g"></div>
+  <div class="anim a" id="h"></div>
+  <div class="anim b" id="i"></div>
+  <div class="anim c" id="j"></div>
+  <div class="anim d" id="k"></div>
+  <div class="anim e" id="l"></div>
+  <div class="anim f" id="m"></div>
+  <div class="anim g" id="n"></div>
 </div>
+
+<div style="height: 450px"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
