--- a/test/testcases/test-start-time.html
+++ b/test/testcases/test-start-time.html
@@ -49,14 +49,20 @@ limitations under the License.
 <div>Right edge of each box should align with black line at end of test.</div>
 
 <div class="animContainer" id="ca">
-  <div style="width: 400px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 400px;" class="expected"><div class="anim b"></div></div>
+  <div style="width: 400px;" class="expected"><div class="anim a" id="a"></div>
+  </div>
+  <div style="width: 400px;" class="expected"><div class="anim b" id="b"></div>
+  </div>
 </div>
 
 <div class="animContainer" id="cb">
-  <div style="width: 200px;" class="expected"><div class="anim a"></div></div>
-  <div style="width: 200px;" class="expected"><div class="anim b"></div></div>
+  <div style="width: 200px;" class="expected"><div class="anim a" id="c"></div>
+  </div>
+  <div style="width: 200px;" class="expected"><div class="anim b" id="d"></div>
+  </div>
 </div>
+
+<div style="height:200px;"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
