--- a/test/test-runner.html
+++ b/test/test-runner.html
@@ -64,10 +64,11 @@ function now() {
 function postResultsToServer(resultObject) {
   var post_iframe = document.getElementById('result-post-frame');
   post_iframe.onload = function(){
-      updateState(1);
+    updateState(1);
   };
 
-  post_iframe.contentDocument.getElementById('data').innerHTML = JSON.stringify(resultObject);
+  post_iframe.contentDocument.getElementById(
+   'data').innerHTML = JSON.stringify(resultObject);
   post_iframe.contentDocument.getElementById('form').submit();
 }
 
@@ -103,7 +104,8 @@ function updateState(change) {
   document.querySelector('#test-link').href = src;
   document.querySelector('#test-frame').src = src;
   document.querySelector('#prev-button').disabled = currentTest <= 0;
-  document.querySelector('#next-button').disabled = currentTest >= tests.length - 1;
+  document.querySelector('#next-button').disabled = (
+      currentTest >= tests.length - 1);
 }
 
 function checkForResults() {
