Last of the ref tests.

--- a/test/testcases/test-timing-functions.html
+++ b/test/testcases/test-timing-functions.html
@@ -39,14 +39,16 @@ body { margin: 0px; }
 
 <div>
   <div id="a" class="anim">(default)</div>
-  <div class="anim test">ease-in</div>
-  <div class="anim test">ease-out</div>
-  <div class="anim test">cubic-bezier(0, 0.2, 0.8, 1)</div>
-  <div class="anim test">steps(3, start)</div>
-  <div class="anim test">steps(3, middle)</div>
-  <div class="anim test">steps(3, end)</div>
-  <div class="anim test">cubic-bezier(0.5, -1.5, 0.5, 2.5)</div>
+  <div class="anim test" id="b">ease-in</div>
+  <div class="anim test" id="c">ease-out</div>
+  <div class="anim test" id="d">cubic-bezier(0, 0.2, 0.8, 1)</div>
+  <div class="anim test" id="e">steps(3, start)</div>
+  <div class="anim test" id="f">steps(3, middle)</div>
+  <div class="anim test" id="g">steps(3, end)</div>
+  <div class="anim test" id="h">cubic-bezier(0.5, -1.5, 0.5, 2.5)</div>
 </div>
+
+<div style="height:50px"></div>
 
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
