--- a/test/testcases/test-to-animation.html
+++ b/test/testcases/test-to-animation.html
@@ -65,6 +65,8 @@ limitations under the License.
   <div id="d" class="anim"></div>
 </div>
 
+<div style="height: 500px;"></div>
+
 <script src="../../web-animations.js"></script>
 <script src="../anim-test-pre.js"></script>
 <script>
