--- a/test/testcases/test-svg-anim.html
+++ b/test/testcases/test-svg-anim.html
@@ -24,7 +24,7 @@ limitations under the License.
   fill: red;
 }
 </style>
-<svg>
+<svg width="600px" height="200px">
   <rect class="expectation" x="400px" y="10px" width="100px" height="100px">
   </rect>
   <rect class="anim" x="100px" y="10px" width="100px" height="100px"></rect>
