--- a/test/testcases/test-transform-primitives.html
+++ b/test/testcases/test-transform-primitives.html
@@ -32,8 +32,8 @@ limitations under the License.
 }
 </style>
 <div></div>
+<div style="height: 550px;"></div>
 <script src="../../web-animations.js"></script>
-<script src="../anim-test-pre.js"></script>
 <script>
 
 var transformValues = [
@@ -78,6 +78,9 @@ var features = detectFeatures();
 
 var toplevel = document.querySelector("div");
 var y = 50;
+
+var animations = [];
+
 for (var i = 0; i < transformValues.length; i++) {
   var x = 10;
   for (var j = 0; j < transformValues[i].length; j++) {
@@ -96,7 +99,8 @@ for (var i = 0; i < transformValues.length; i++) {
       div.className = "anim";
       div.style.top = y + 'px';
       div.style.left = x + 'px';
-      document.timeline.play(new Animation(div, {"transform":
+      div.id = "i" + i + "_" + j + "_" + k
+      animations.push(new Animation(div, {"transform":
           [transformValues[i][j], transformValues[i][k]]}, 2));
       x += separation_x;
       if (x > max_x) {
@@ -108,4 +112,8 @@ for (var i = 0; i < transformValues.length; i++) {
   y += separation_y;
 }
 
+</script>
+<script src="../anim-test-pre.js"></script>
+<script>
+animations.forEach(function(anim) { document.timeline.play(anim); });
 </script>
